@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-07-02T12:32:11Z",
+  "timestamp" : "2024-07-03T01:16:06Z",
   "count_outdated" : 2601,
   "uniques_outdated" : 841,
-  "count" : 2622,
-  "uniques" : 851,
+  "count" : 2639,
+  "uniques" : 852,
   "views" : [
     {
       "timestamp": "2024-06-19T00:00:00Z",
@@ -73,6 +73,15 @@
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-07-02T00:00:00Z",
+      "count": 17,
+      "count_minmax": [ 17, 17 ],
+      "count_decinc": [ 0, 17 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
