@@ -1,6 +1,6 @@
 {
-  "count": 21,
-  "uniques": 7,
+  "count": 38,
+  "uniques": 8,
   "views": [
     {
       "timestamp": "2024-06-19T00:00:00Z",
@@ -40,6 +40,11 @@
     {
       "timestamp": "2024-06-28T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-07-02T00:00:00Z",
+      "count": 17,
       "uniques": 1
     }
   ]
